--- a/html/aesthetic_ideas.html
+++ b/html/aesthetic_ideas.html
@@ -32,6 +32,13 @@
 >Gameplay ideas: Duck Life progression, <br>
 
 <br>
+Any ideas that I combine will be done in a way that is unique to me <br>
+So long as I'm not directly taking, even inspiration with similar genes will produce a distinct enough result <br>
+
+<br>
+Depicting the participatory relationship between people and nature
+
+<br>
 <b>canvas/environment/engine in which things of a broad spectrum can be added. i.e. ultrakill</b>
 
 <br><br>
@@ -47,7 +54,11 @@
 >I admire interesting prose <br>
 >I think attributing literary qualities to current art is cool in an age of spam-content <br>
 
-<b>Rotating between them keeps me mentally engaged, they can all feed back in to one another too.</b> 
+<b>Rotating between them keeps me mentally engaged, they can all feed back in to one another too.</b> <br>
+
+<br>
+<b>Sky Island</b>
+>Examples: Tears Of The Kingdom; Laputa: Castle in the Sky; Granblue Fantasy; Minecraft aether; Skypiea; Chrono Trigger 
 
 </div>
 
