--- a/html/exercise.html
+++ b/html/exercise.html
@@ -23,18 +23,87 @@
 <div class="centerpiece">
 <div1 style="text-align:left">
 
-6 Kettlebell Exercises
+We all understand why exercise is important logically, it's just about doing it enough that your body gets accustomed to it <br>
+Maybe this is my bias, but I think exercise is universally fun, you just need to find what kind of exercise YOU find enjoyeable or rewarding <br>
+
+
+<br>
+<b>Compound Training vs Isolation Training</b> <br>
+>There is a foundational difference in the target of exercises that changes how they should be implemented <br>
+>Compound exercises feature more movement and engage are larger set of muscles, typically a muscle group <br>
+>Isolation exercises focus on engaging a specific set of muscles for greater effect <br>
+>I prefer compound exercises which ensure a more balanced gain of strength<br>
+
+
+<h2>Coming up with a workout plan</h2>
+>I like to divide the body's muscles into 6 groups, any smaller planning-wise is too specific imo <br>
+>1.Arms - Triceps & Biceps <br>
+>2.Core <br>
+>3.Shoulders <br>
+>4.Chest <br>
+>5.Back <br>
+>6.Legs <br>
+<br>
+><b>How to split these?</b> <br>
+>How many musclegroups do you want to hit in a single workout? <br>
+>How much rest do you need? <br>
+
+
+
+<br>
+<h1>Kettlebells</h2>
+I like kettlebells for a few reasons. <br>
+>1. First, kettlebell exercises normally engage whole muscle groups and suit my preference for compound training. <br>
+>2. Second, they're a single isolated piece of equipment that isn't really a hassle to store but can give a great workout <br>
+>3. Finally, I had access to it. The kettlebell swing was one of my first workout breakthroughs only because I had one available. 
+	As such, I've come to see it as the old relaible option. <br>
+
+<br>
+6 Kettlebell Exercises - Compound exercises - Pavel Tatsouline - <a href="https://youtu.be/cKx8xE8jJZs">Enter The Kettlebell</a> <br>
+>The Squat <br>
+>Kettlebell Swing <br>
+>The Clean <br>
+>The Press <br>
+>The Get-up <br>
+>The Snatch (I don't use this one)<br>
+
 
 <h2>Deep Squat - <a href="https://youtu.be/P_4CL4VS3Ug">Link</a></h2>
+
+<h2>Yoga & Qigong - Flexibility and Energy</h2>
+
+<b>Surya Namaskara - Sun Salutations</b> <br><br>
+
+<b>Butterfly Pose</b> <br><br>
+
+<b>Lotus Pose</b> <br><br>
+
+<b>Horse Stance</b> <br><br>
+
+
+<b>Qigong - Baduanjin Eight Brocades</b> <br>
+><a href="https://youtu.be/3K-0JpiJu-o">Video Demonstration</a> by Mimi Kuo-Deemer <br>
+>1.Two Hands Hold up the Heavens <br>
+>2.Drawing the Bow to Shoot the Eagle / Hawk / Vulture <br>
+>3.Separate Heaven and Earth <br>
+>4.Wise Owl Gazes Backwards or Look Back <br>
+>5.Sway the Head and Shake the Tail <br>
+>6.Two Hands Hold the Feet to Strengthen the Kidneys and Waist <br>
+>7.Clench the Fists and Glare Fiercely (or Angrily) <br>
+>8.Bouncing on the Toes <br>
+
+
+
+<h2>Boxing - Kicks</h2>
+><b>Boxing</b>: Jab - Straight - Hook - Uppercut <br>
+><b>Muay Thai</b>: Teep (+walking), Check, Knee(+walking), Push kick/Tepps, Kick - Leg/Side  <a href="https://youtu.be/7sLw5dHdRG4">Drills 1</a> 
+	<a href="https://youtu.be/uFJSSYECov4">Drills 2</a>
+
+
 
 <h2>Counter Sitting</h2>
 >Hamstrings 1 leg forward lean <a href="https://www.youtube.com/watch?v=iG7Z4F14ijs">Link</a><br>
 >Hip Flexors - Lotus pose<br>
-
-
-<h2>Boxing</h2>
-<h2>Adding kicks</h2>
-
 </div1>
 
 </body>
