--- a/html/gamedev.html
+++ b/html/gamedev.html
@@ -26,10 +26,17 @@
 
 <h2>Video Game Development Homepage</h2>
 
+Theory: Learning to mod before game development? <br><br>
+
 Here are the texts to reference: <br>
 <a href="http://gameprogrammingpatterns.com/contents.html">Game Programming Patterns</a> by Robert Nystrom <br>
 Game Mechanics: Advanced Game Design<br><br>
 
+
+>Instead of trying to come up with an idea that I think is cool enough to stand against some of the most respected games, implement ideas that are mediocre-to-alright and eventually something better will come up. The idea generator isn't trained enough to make something standout, but I can do decent pretty well methinks <br>
+>Next step will be finding what ideas pass the prediction-reward-error calculation. Small, student project or smaller skin scale. <br>
+
+<br>
 <b>Here are some creative ideas I've jotted down</b> <br>
 
 
