--- a/html/media.html
+++ b/html/media.html
@@ -102,7 +102,7 @@
 		<th><img src="../images/Character-Board/mia-fey1.jpg" style="height:225px;"> <br>Mia Fey</th>
 	</tr>
 	<tr>
-		<th></th>
+		<th><img src="../images/Character-Board/katalina2.png" style="height:225px;"> <br>Katalina</th>
 		<th></th>
 		<th></th>
 		<th></th>
