--- a/html/aesthetic_ideas.html
+++ b/html/aesthetic_ideas.html
@@ -22,6 +22,36 @@
 </div>
 
 <div class="centerpiece">
+<h2>Ideas</h2>
+<br>
+Any ideas that I combine will be done in a way that is unique to me <br>
+So long as I'm not directly taking, even inspiration with similar genes will produce a distinct enough result <br>
+Depicting the participatory relationship between people and nature<br>
+
+<h3>TVTropes Analysis</h3>
+<b>Laputa</b> <br>
+>Ancient Advanced Acropolis <br>
+>Floating Continent <br>
+>After the End <br>
+>Gentle Giant <br>
+>Nature Loving Robot <br>
+>Ominous Floating Castle <br>
+>Those Magnificent Flying Machines <br>
+
+<br>
+<b>Yokohama Kaidashi Kikou</b>
+>After the End <br>
+>Beautiful Void <br>
+>Flooded Future World <br>
+>Mono no Aware <br>
+>Ragnarok Proofing <br>
+>Walking the Earth <br>
+
+<br>
+<b>Nier Automata</b>
+>After the End
+
+
 <h2>Games</h2>
 <b>Chao Garden/Dragon City chill environment to hang out with little guys</b> <br>
 >Creature evolutions/types - <a href="https://chao-island.com/info-center/life-cycle/evolution">Chao</a> <br>
@@ -30,14 +60,6 @@
 >Minigames of my choice, gambling, bug fights
 >moddable <br>
 >Gameplay ideas: Duck Life progression, <br>
-
-<br>
-Any ideas that I combine will be done in a way that is unique to me <br>
-So long as I'm not directly taking, even inspiration with similar genes will produce a distinct enough result <br>
-
-<br>
-Depicting the participatory relationship between people and nature
-
 <br>
 <b>canvas/environment/engine in which things of a broad spectrum can be added. i.e. ultrakill</b>
 
