--- a/html/botany.html
+++ b/html/botany.html
@@ -30,7 +30,7 @@
 >Petri dish prep <br>
 
 
-<h2>MLE Agar Recipe & Process </h2>
+<h2>MLE Agar Recipe & Process - 1/2 ratio is sufficient for 1 jar </h2>
 Ingredients: <br>
 <ul>
 	<li>500ml Distilled Water</li>
