--- a/html/gamedev.html
+++ b/html/gamedev.html
@@ -26,8 +26,11 @@
 
 <h2>Video Game Development Homepage</h2>
 
-Theory: Learning to mod before game development? <br><br>
+Theory: Learning to mod before game development? <br>
+>Bomb Rush mod idea: Custom character, recolor, putting characters in hub <br>
 
+
+<br>
 Here are the texts to reference: <br>
 <a href="http://gameprogrammingpatterns.com/contents.html">Game Programming Patterns</a> by Robert Nystrom <br>
 Game Mechanics: Advanced Game Design<br><br>
