--- a/html/media.html
+++ b/html/media.html
@@ -28,6 +28,30 @@
 <table>
 	<tr><td>
 		<table>
+			<th><img src="../images/Reviews/Va11halla.jpg" width=200px></th>
+			<th style="width: 250px;">Name: Va11-Hall-A <br><br> Release Date: 2020 <br> Finished: May 2021 <br><br> Creator: Moon Studios <br><br> score: 10/10 <br><br> Favorite Character: Kwolok, the water <br></th>
+			<th style="width: 700px;"> </th>
+		</table>
+	</td></tr>
+
+	<tr><td>
+		<table>
+			<th><img src="../images/Reviews/ori-and-the-will-of-the-wisps.jpg" width=200px></th>
+			<th style="width: 250px;">Name: Ori and the Will of the Wisps <br><br> Release Date: 2016 <br> Finished: Jul 2020 <br><br> Creator: Sukeban Games <br><br> score: 9/10 <br><br> Favorite Character: Alma <br></th>
+			<th style="width: 700px;"> </th>
+		</table>
+	</td></tr>
+
+	<tr><td>
+		<table>
+			<th><img src="../images/Reviews/nier-automata.jpg" width=200px></th>
+			<th style="width: 250px;">Name: Nier Automata <br><br> Release Date: 2017 <br> Finished: Jan 2021 <br><br> Creator: Yoko Taro, PlatinumGames <br><br> score: 10/10 <br><br> Favorite Character: Pascal, <br></th>
+			<th style="width: 700px;"> </th>
+		</table>
+	</td></tr>
+
+	<tr><td>
+		<table>
 			<th><img src="../images/Reviews/risk-returns.jpg" width=200px></th>
 			<th style="width: 250px;">Name: Risk of Rain Returns <br><br> Release Date: 2024 <br> Finished: June 2024 <br><br> Creator: Hopoo Studio <br><br> score: 10/10 <br><br> Favorite Character: Engineer, turret homie go pew-pew <br></th>
 			<th style="width: 700px;"> Some of the most gorgeous pixel art of all time, the background on the Elder Temple and Sky Meadow are so moving. I like that this game feels kinda like a flash game with the arrow key controls and some of the providence trials. This game is HARD though, man is there a learning curve at which I through myself for many hours and runs. But despite it all the package is incredible, especially for the price tag. </th>
