--- a/html/philosophical_ideas.html
+++ b/html/philosophical_ideas.html
@@ -144,6 +144,43 @@
 	</p>
 
 
+	<h2>Goal Setting & Motivation</h2>
+
+	<p><b>Planning & Goal Setting</b></p> 
+	>Desires; Shoulds -  <br>
+	>Values; Duty/Dharma - Intrinsically motivating <br>
+	>By moving shoulds towards the bottom categories, we gain intrinsic motivation  <br>
+	
+
+	<p><b>Common Pitfalls in Goal Setting</b></p> 
+	>Compensatory Goal <br>
+	>Fantasy-based Goal <br>
+	>Goals from desires/external direction <br>
+	
+
+	<p><b>Setting a Good Goal</b></p> 
+	>1. What is the intent behind this goal? Try to move it towards intrinsically motivating sources like values or dharma <br>
+	>2. Make goal actionable and measurable; transform from goal to action (verb: do..., read...) <br>
+	&thinsp;>Ensure this goal is self-actionable, does not depend on another <br>
+	>3. Ensure goal is not overly ambitious, too far away <br>
+	>The 25% Rule - By building towards our goal in smaller increments, starting at 25% for example, the actualy process gets easier <br>
+
+	<br>
+	<p><b>Getting Overwhelmed - <a href="https://coaching.healthygamer.gg/guide/lessons/getting-overwhelmed">Dr. K's Guide</a></b></p> 
+	>As tasks pile up, we can struggle to get motivated to finish them <br>
+	>You'd think that the more you care about something, the more motivated you should be to do it, right? But in reality, this self-placed importance can become paralyzing, as the more we care about something the more important it becomes that it be done correctly. <br>
+	>This can explain decision paralysis, when we don't think we'll be able to act in a way that meets our expectation. <br>
+	>What is required to start, is <b>compromise</b>. Give up on the dream of writing a best-selling novel to write a first draft. <br>
+<br>
+	>A solution?
+	>Acknowledge how important this is to you, & that you'll need to start somehow <br>
+	>Try creating a compromise between your perfectionist self, and your paralyzed self. Do something that scratches your perfectionist's itch, but that you can do out of decision paralysis, low momentum requirement<br>
+<br>
+	>1. Make the task easier for yourself, grow your capacity for <b>operationalizing</b> (breaking a task down into actionable steps) by practice. <br>
+	>2. Cultivate some level of detachment, ironically taking a step back can help clear your decision making, quell some of those expectations.<br>
+
+
+
 	<h2>Neuroscience of motivation</h2>
 	<br>
 	<p><b>Overview</b> <br>
