Eastern philo adds

--- a/html/aesthetic_ideas.html
+++ b/html/aesthetic_ideas.html
@@ -28,6 +28,18 @@ Any ideas that I combine will be done in a way that is unique to me <br>
 So long as I'm not directly taking, even inspiration with similar genes will produce a distinct enough result <br>
 Depicting the participatory relationship between people and nature<br>
 
+<br>
+Consideration of <b>story</b>
+>"I always thought the "story" parts lent to/made fo the art is bascially how the artist wants to make connections with other people. So make it for as many people as will connect with it, however many that you want" <br>
+<br>
+>Video games are the only medium in which you can flesh out the world in a "non-linear?" way (ex. Risk of Rain Logbooks, Fromsoft items) <br>
+
+<br>
+Questions I'll need to answer <br>
+>What do I want to make?
+>What does it look like (story? medium?)
+
+
 <h3>TVTropes Analysis</h3>
 <b>Laputa</b> <br>
 >Ancient Advanced Acropolis <br>
