--- a/html/eastern_philosophy.html
+++ b/html/eastern_philosophy.html
@@ -54,14 +54,35 @@
 	<b>Alternate topic of investigation:</b> Tantric Texts</b>
 
 
-	>Shantideva (<a ref="https://www.lotsawahouse.org/indian-masters/shantideva/bodhicharyavatara-1">Bodhicaryavatara</a>: A Guide to the Bodhisattva's Way of Life; Śikṣāsamuccaya: Training Anthology) <br>
+	>Shantideva (<a href="https://www.lotsawahouse.org/indian-masters/shantideva/bodhicharyavatara-1">Bodhicaryavatara</a>: A Guide to the Bodhisattva's Way of Life; Śikṣāsamuccaya: Training Anthology) <br>
 	>Candrakirti(Theory of Two-Truths): Madhyamakāvatāra <br>
 
+	
+	<h2>Orthodox Indian Study</h2>
+	
+
+
+	<h2>Buddhism Study</h2>
+	>Theravada
+	>Mahayana Buddhism
+	>Chan Buddhism
+
+	<h2>Taoism Study</h2>
+	Tao Te Ching - Laozi
+	Zhuangzi - Zhuang Zhou
+	I Ching - The book of changes
+	The Ten Feathers, commentary on the IChing 
+
+	<a href="https://youtu.be/-M9xQJJhrKA">Chad Hansen Lecture</a> <br>
+	Not concerned with belief or ritual, but rather on "ways" that can be taken in life. <br>
+	In the modern world this concept is called normativity (aka ethics or morality) <br>
+	Viewed through the lense: Where does life guidance come from, where do I find it, what gives it its status as good advice. <br>
+
 	<br>
-	<b>Chinese Philosophy</b> <br>
-	>Taoism: Tao Te Qing <br>
-	>Confucianism: <br>
-	>Buddhism(Chan) <br>
+	<b>Tao Te Ching</b> <br>
+	Sources: <a href="https://terebess.hu/english/tao/gia.html#Kap01">Gia-Fu Feng & Jane English</a>; 
+	<a href="https://terebess.hu/english/tao/LeGuin.pdf">Ursula K. Le Guin</a>; 
+	<a href="https://www.taoistic.com/">Stefan Stenudd</a>
 
 
 </div1>
